tests/vertical-slice/reject/cross_module_generic_fn_value/main.hew
// Generic cross-module named functions as values are deferred: the
// diagnostic must name the exported generic function and the lambda
// workaround, never misreport a missing constant or crash. The non-generic
// case is accepted (see accept/cross_module_fn_value).
import helpers;

fn main() {
    let f = helpers.first;
    println(f([1, 2, 3]));
}
